# kot-i-pat

./: pyproject.toml
kot_i_pat/: app.py  config.py  db.py  ingress.py
